# zrive-ds

./: .gitignore  logs.txt  pyproject.toml
src/module_2/: module_2_data.ipynb  module_2_data.md  module_2_eda.ipynb  module_2_eda.md
src/module_3/: module_3.ipynb  module_3.md
src/module_4/: inference.py  notebook.ipynb  notebook.md  train.py  utils.py
src/module_5/: module_5.ipynb  module_5.md
src/module_6/: app.py
src/module_6/src/: exceptions.py
src/module_6/src/basket_model/: basket_model.py  feature_store.py
tests/module_6/: test_app.py
